initial wireframe pass

--- a/app/index.html
+++ b/app/index.html
@@ -31,15 +31,18 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="">
         <div class="navbar-header">
-          <span class="navbar-brand"><img src="/images/fda.png" style="height:30px; margin-top:-5px; margin-left:-10px"></img></span>
-          <span class="navbar-brand" style="margin-left:-20px; margin-top:1px">Food Recalls</span>
+          <span class="navbar-brand" style="margin-top:0px">GSA 18F Prototype</span>
         </div>
+        <span class="pull-right" id="logo">
+          <span class="navbar-brand"><img src="/images/esri.png" style="height:30px; margin-top:-5px; margin-left:-10px"></img></span>
+        </span>
       </div>
     </nav>
 
     <div id="map"></div>
 
     <div id="list-container">
+      <div id="close-list"><i class="glyphicon glyphicon-remove-circle"></i></div>
       <h4 id="list-header"></h4>
       <hr />
       <ul id="list"></ul>
