fixing image paths

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
           <span class="navbar-brand" style="margin-top:0px">GSA 18F Prototype</span>
         </div>
         <span class="pull-right" id="logo">
-          <span class="navbar-brand"><img src="../images/esri.png" style="height:30px; margin-top:-5px; margin-left:-10px"></img></span>
+          <span class="navbar-brand"><img src="/openfda/images/esri.png" style="height:30px; margin-top:-5px; margin-left:-10px"></img></span>
         </span>
       </div>
     </nav>
