--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/nprogress/nprogress.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -16,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="http://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/1.0.0-rc.4/esri-leaflet-geocoder.css">
 
     <!-- build:css styles/main.css -->
+    <link rel="stylesheet" href="styles/animate.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
@@ -104,6 +106,7 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
+    <script src="/bower_components/nprogress/nprogress.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
