--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,7 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
     <script src="/bower_components/nprogress/nprogress.js"></script>
+    <script src="/bower_components/arc.js/arc.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
