--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,10 @@
 
         <script src="http://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/1.0.0-rc.4/esri-leaflet-geocoder.js"></script>
 
+        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/vega/1.4.3/vega.min.js"></script>
+        <script type="text/javascript" src="https://rawgit.com/Esri/cedar/master/src/cedar.js"></script>
+
         <!-- build:js scripts/main.js -->
         <script src="scripts/lodash.min.js"></script>
         <script src="scripts/recalls.js"></script>
