upding UI to match mock changes and adding return to overview

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="">
         <div class="navbar-header">
-          <span class="navbar-brand" style="margin-top:0px">GSA 18F Prototype</span>
+          <span class="navbar-brand" style="margin-top:0px"><span class="bold" style="margin-right:15px">GSA 18F Prototype</span> <span class="light">Find recalled food products in your state.</span></span>
         </div>
         <span class="pull-right" id="logo">
           <span class="navbar-brand"><img src="/openfda/images/esri.png" style="height:30px; margin-top:-5px; margin-left:-10px"></img></span>
@@ -53,9 +53,9 @@
 
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Dangerous</a></li>
-          <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Slight Threat</a></li>
-          <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Unlikely Threat</a></li>
+          <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Dangerous <span id="danger-count"><span></a></li>
+          <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Slight <span id="slight-count"><span></a></li>
+          <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Unlikely Threat <span id="unlikely-count"><span></a></li>
         </ul>
 
         <!-- Tab panes -->
