adding census numbers for recall

--- a/app/index.html
+++ b/app/index.html
@@ -71,8 +71,8 @@
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
           <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Dangerous <span id="danger-count"><span></a></li>
-          <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Slight <span id="slight-count"><span></a></li>
-          <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Unlikely <span id="unlikely-count"><span></a></li>
+          <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Slight Threat <span id="slight-count"><span></a></li>
+          <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Unlikely Threat <span id="unlikely-count"><span></a></li>
         </ul>
 
         <!-- Tab panes -->
@@ -107,6 +107,21 @@
       <div class="legend-item col-md-2 col-sm-2 col-xs-2" id="legend-item-1"></div>
       <div id="legend-min"></div>
       <div id="legend-max"></div>
+    </div>
+
+    <div id="census" class="col-md-12 col-sm-12 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-6" style="padding-left:0px; padding-right:0px">
+        <div id="legend-title">Population (2012) impacted by recall</div>
+        <div id="total-pop"></div>
+      </div>
+      <div class="col-md-6 col-sm-6 col-xs-6" style="padding-left:0px;">
+        <div class="col-md-9 col-sm-9 col-xs-9" style="padding-left:0px; padding-right:3px">
+          <div id="percent-of-total"></div>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-3" style="padding-left:0px;">
+          <div id="of-pop">of U.S. population.</div>
+        </div>
+      </div>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
