--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,8 @@
             <option>Terminated</option>
             <option>Pending</option>
           </select>
+
+          <a href="http://koop-fda-1504637322.us-east-1.elb.amazonaws.com/FDA.csv" id="download-button" title="Export this data to CSV"><i class="glyphicon glyphicon-cloud-download"></i></a>
         </div>
 
         <!-- Nav tabs -->
