--- a/app/index.html
+++ b/app/index.html
@@ -143,6 +143,7 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/moment/moment.js"></script>
     <script src="/bower_components/nprogress/nprogress.js"></script>
+    <script src="/bower_components/arc/arc.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
