--- a/app/index.html
+++ b/app/index.html
@@ -174,6 +174,7 @@
         <!-- build:js scripts/main.js -->
         <script src="scripts/lodash.min.js"></script>
         <script src="scripts/recalls.js"></script>
+        <script src="scripts/numeral.min.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 
