--- a/app/index.html
+++ b/app/index.html
@@ -144,6 +144,7 @@
     <script src="/bower_components/moment/moment.js"></script>
     <script src="/bower_components/nprogress/nprogress.js"></script>
     <script src="/bower_components/arc/arc.js"></script>
+    <script src="/bower_components/numeraljs/numeral.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -174,7 +175,6 @@
         <!-- build:js scripts/main.js -->
         <script src="scripts/lodash.min.js"></script>
         <script src="scripts/recalls.js"></script>
-        <script src="scripts/numeral.min.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 
